
    $ ./symfony doctrine:dql "FROM Article a" --table
    >> doctrine  executing dql query
    DQL: FROM Article a
    +----+-----------+----------------+---------------------+---------------------+
    | id | author_id | is_on_homepage | created_at          | updated_at          |
    +----+-----------+----------------+---------------------+---------------------+
    | 1  | 1         |                | 2009-07-07 18:02:24 | 2009-07-07 18:02:24 |
    | 2  | 2         |                | 2009-07-07 18:02:24 | 2009-07-07 18:02:24 |
    +----+-----------+----------------+---------------------+---------------------+
    (2 results)

### Debugging queries in functional tests

The `sfTesterDoctrine` class now includes a `->debug()` method. This method
will output information about that queries that have been run in the current
context.

    [php]
    $browser->
      get('/articles')->
      with('doctrine')->debug()
    ;

You can view only the last few queries executed by passing an integer to the
method, or show only queries that contain a substring or match a regular
expression by passing a string.

    [php]
    $browser->
      get('/articles')->
      with('doctrine')->debug('/from articles/i')
    ;

Web Debug Toolbar
-----------------

### `sfWebDebugPanel::setStatus()`

Each panel in the web debug toolbar can specify a status that will affect its
title's background color. For example, the background color of the log panel's
title changes if any messages with a priority greater than `sfLogger::INFO`
are logged.

### `sfWebDebugPanel` request parameter

You can now specify a panel to be open on page load by appending a
`sfWebDebugPanel` parameter to the URL. For example, appending
`?sfWebDebugPanel=config` would cause the web debug toolbar to render with the
config panel open.

Panels can also inspect request parameters by accessing the web debug
`request_parameters` option:

    [php]
    $requestParameters = $this->webDebug->getOption('request_parameters');